# chatrooms

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: client.py  core.py  handler.py  protocol.py  server.py  user.py
src/chatrooms/: __init__.py  client.py  core.py  gui.py  handler.py  message.py  protocol.py  server.py
tests/: test_protocol.py
