
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrooms"
version = "0.1.0"
description = "WebSocket-based chat application"
requires-python = ">=3.10"
dependencies = [
  "websockets>=16.0",
  "pyqt6>=6.10.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
